kloudknox-cli/cmd/embed/k8s/02_operator-controller.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kloudknox
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kloudknox-operator
  namespace: kloudknox
  labels:
    boanlab.com/app: kloudknox-operator
spec:
  selector:
    matchLabels:
      boanlab.com/app: kloudknox-operator
  replicas: 1
  template:
    metadata:
      labels:
        boanlab.com/app: kloudknox-operator
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - command:
        - /kloudknox-operator
        args: []
        image: boanlab/kloudknox-operator:latest
        name: kloudknox-operator
        ports: []
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - "ALL"
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        volumeMounts: []
      volumes: []
      serviceAccountName: kloudknox-operator
      terminationGracePeriodSeconds: 10
