kloudknox-cli/cmd/embed/k8s/99_relay-server.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kloudknox
---
apiVersion: v1
kind: Service
metadata:
  name: kloudknox-relay-server
  namespace: kloudknox
  labels:
    boanlab.com/app: kloudknox-relay-server
spec:
  type: ClusterIP
  selector:
    boanlab.com/app: kloudknox-relay-server
  ports:
  - name: grpc
    port: 33900
    targetPort: grpc
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kloudknox-relay-server
  namespace: kloudknox
  labels:
    boanlab.com/app: kloudknox-relay-server
spec:
  replicas: 1
  selector:
    matchLabels:
      boanlab.com/app: kloudknox-relay-server
  template:
    metadata:
      labels:
        boanlab.com/app: kloudknox-relay-server
    spec:
      serviceAccountName: kloudknox-relay-server
      terminationGracePeriodSeconds: 15
      containers:
      - name: relay-server
        image: boanlab/kloudknox-relay-server:v0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: grpc
          containerPort: 33900
          protocol: TCP
        readinessProbe:
          grpc:
            port: 33900
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          grpc:
            port: 33900
          periodSeconds: 10
          failureThreshold: 3
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 65532
          runAsGroup: 65532
          capabilities:
            drop:
            - ALL
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
      securityContext:
        seccompProfile:
          type: RuntimeDefault
